Import PrimeFaces Theme

--- a/springbootjsf/src/main/webapp/login.xhtml
+++ b/springbootjsf/src/main/webapp/login.xhtml
@@ -27,6 +27,7 @@
 			<f:facet name="footer">
 				<center>
 					<p:commandButton value="Giriş" action="#{pc_Login.doLogin}"></p:commandButton>
+					<p:calendar value="#{pc_Login.date}" locale="tr" navigator="true"></p:calendar>
 				</center>
 			</f:facet>
 			<center>
